--- a/docs/digital-twin/index.org
+++ b/docs/digital-twin/index.org
@@ -50,7 +50,7 @@ https://main.ow2.org/download/FlamingoThemes/WhiteOW2/OW2_Logo_Evolution_FullCol
   - In 2000, I hacked a "[[http://rzr.online.fr/net3d][VRML Puppet on the web]]"
 * DT Robot demo
 
-@@html:<iframe width="560" height="315" src="https://www.youtube.com/embed/pGZbHdiTalQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>@@
+@@html:<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/pGZbHdiTalQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>@@
 
 [[https://peertube.mastodon.host/videos/watch/1d7de472-9e72-4bd2-8727-1882f247eca0][📺]]
 [[https://www.youtube.com/watch?v=pGZbHdiTalQ&list=UUgGWtPbelycq8xjbaI1alZg&index=1#web-of-twins-fosdem-2020-rzr#][📺]]
@@ -223,7 +223,7 @@ from devices to VR/XR user interface.
   :reveal_background_opacity: 0.05
   :END:
 
-@@html:<iframe width="560" height="315" src="https://www.youtube.com/embed/s3r8pQtzhAU#wotxr-20190320rzr" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>@@
+@@html:<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/s3r8pQtzhAU#wotxr-20190320rzr" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>@@
 
 [[https://youtu.be/s3r8pQtzhAU#wotxr-20190320rzr][📺]]
 [[https://peertube.mastodon.host/videos/embed/453f14cf-1c61-4803-b8e2-2a404dfa1d16#wotxr-20190320rzr][📺]]
@@ -234,7 +234,7 @@ from devices to VR/XR user interface.
   :reveal_background_opacity: 0.05
   :END:
 
-@@html:<iframe width="560" height="315" src="https://www.youtube.com/embed/sUayRsjV1Ys#digitaltwins-webthings-iotjs-20190512rzr]" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>@@
+@@html:<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/sUayRsjV1Ys#digitaltwins-webthings-iotjs-20190512rzr]" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>@@
 
 [[https://peertube.mastodon.host/download/videos/5bee0c53-e856-49f3-9d30-35fce28d8a42-720.mp4][📺]]
 [[https://youtu.be/sUayRsjV1Ys#digitaltwins-webthings-iotjs-20190512rzr][📺]]
