--- a/docs/immersive-twins/index.org
+++ b/docs/immersive-twins/index.org
@@ -149,7 +149,7 @@ Extra:
     - Control WebThings using A-Frame
 * Robot and its "twin"
 
-@@html:<iframe width="560" height="315" src="https://www.youtube.com/embed/sUayRsjV1Ys#digitaltwins-webthings-iotjs-20190512rzr]" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>@@
+@@html:<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/sUayRsjV1Ys#digitaltwins-webthings-iotjs-20190512rzr]" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>@@
 
 [[https://peertube.mastodon.host/download/videos/5bee0c53-e856-49f3-9d30-35fce28d8a42-720.mp4][📺]]
 [[https://youtu.be/sUayRsjV1Ys#digitaltwins-webthings-iotjs-20190512rzr][📺]]
@@ -168,10 +168,10 @@ Extra:
   - Simplified W3C WoT Description (in JSON)
 * Different perspectives
 
-@@html:<iframe width="560" height="315" src="https://www.youtube.com/embed/s3r8pQtzhAU#wotxr-20190320rzr" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+@@html:<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/s3r8pQtzhAU#wotxr-20190320rzr" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>@@
 
-[[https://youtu.be/s3r8pQtzhAU#wotxr-20190320rzr][.]]
-[[https://peertube.mastodon.host/videos/embed/453f14cf-1c61-4803-b8e2-2a404dfa1d16#wotxr-20190320rzr][.]]
+[[https://youtu.be/s3r8pQtzhAU#wotxr-20190320rzr][📺]]
+[[https://peertube.mastodon.host/videos/embed/453f14cf-1c61-4803-b8e2-2a404dfa1d16#wotxr-20190320rzr][📺]]
 
 * From Reality to XR:
 :PROPERTIES:
@@ -232,13 +232,23 @@ Extra:
 * Q&A or Extra demos ?
 * Extra: DT Robot demo
 
-@@html:<iframe width="560" height="315" src="https://www.youtube.com/embed/pGZbHdiTalQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>@@
+@@html:<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/pGZbHdiTalQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>@@
 
 [[https://peertube.mastodon.host/videos/watch/1d7de472-9e72-4bd2-8727-1882f247eca0][📺]]
 [[https://www.youtube.com/watch?v=pGZbHdiTalQ&list=UUgGWtPbelycq8xjbaI1alZg&index=1#web-of-twins-fosdem-2020-rzr#][📺]]
 
 * Video playback
   @@html:<video controls src="https://conf.tube/download/videos/fcbd94ee-eecd-458c-b33b-dcb0232adf21-1080.mp4" muted></video>@@
+
+
+[[https://conf.tube/videos/watch/fcbd94ee-eecd-458c-b33b-dcb0232adf21#immersive-twins-lgm2020-rzr][📺]]
+[[https://www.youtube-nocookie.com/embed/2iDX1G8BoH8#immersive-twins-lgm2020-rzr][📺]]
+[[https://peertube.debian.social/accounts/rzr_guest#][📺]]
+[[https://diode.zone/video-channels/www.rzr.online.fr#][📺]]
+[[http://purl.org/rzr/youtube#:TODO:2020:][📺]]
+[[http://purl.org/rzr/videos][📺]]
+
+
 * More
   - https://purl.org/rzr/
   - https://purl.org/rzr/presentations
